# Pycore

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.ja.rst  README.md  README.rst  codecov.yml  cogs.rst  conf.py  discord.rst  faq.rst  index.rst  installing.rst  intents.rst  logging.rst  make.bat  migrating_to_v1.rst  migrating_to_v2.rst  old_changelog.rst  pyproject.toml  quickstart.rst  readthedocs.yml  version_guarantees.rst
_static/js/: scorer.js
api/: abcs.rst  application_commands.rst  application_info.rst  async_iter.rst  audit_logs.rst  clients.rst  cogs.rst  data_classes.rst  enums.rst  events.rst  exceptions.rst  index.rst  models.rst  sinks.rst  ui_kit.rst  utils.rst  version_info.rst  voice.rst  webhooks.rst
ext/bridge/: api.rst  index.rst
ext/commands/: api.rst  cogs.rst  commands.rst  extensions.rst  index.rst
ext/pages/: index.rst
ext/tasks/: index.rst
